# DissertationMotorControl

./: CMakeLists.txt  Interface.py  InterfaceV2.py  InterfaceV2.spec  README.md  main.c  mcp2515.c  pico_sdk_import.cmake  test.py
MotorControl/: CMakeLists.txt  main.c  mcp2515.c  mcp2515.h  test.c  test_main.c
logs/: serial_log_20260122_142223.txt  serial_log_20260122_142558.txt  serial_log_20260122_144334.txt  serial_log_20260122_145037.txt  serial_log_20260122_150154.txt  serial_log_20260122_150506.txt  serial_log_20260122_150530.txt  serial_log_20260122_150756.txt  serial_log_20260122_150808.txt  serial_log_20260122_150910.txt  serial_log_20260122_151640.txt  serial_log_20260122_151747.txt  serial_log_20260126_105301.txt  serial_log_20260126_105352.txt  serial_log_20260126_112029.txt  serial_log_20260126_123938.txt  serial_log_20260126_123957.txt  serial_log_20260126_124020.txt  serial_log_20260126_124202.txt  serial_log_20260126_124304.txt  serial_log_20260126_124436.txt  serial_log_20260126_124549.txt  serial_log_20260126_124633.txt  serial_log_20260126_124733.txt  serial_log_20260126_125230.txt  serial_log_20260126_152530.txt  serial_log_20260126_152652.txt  serial_log_20260126_153119.txt  serial_log_20260126_155146.txt  serial_log_20260126_162016.txt  serial_log_20260126_171145.txt  serial_log_20260126_171202.txt  serial_log_20260127_103939.txt  serial_log_20260127_105552.txt  serial_log_20260127_105858.txt  serial_log_20260127_105953.txt  serial_log_20260127_110020.txt  serial_log_20260127_110050.txt  serial_log_20260127_110455.txt  (+26 more)
